k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-asp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-asp
  template:
    metadata:
      labels:
        app: test-asp
    spec:
      containers:
        - name: test-asp
          image: registry.registry.svc.cluster.local:5000/test-asp:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
