k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-asp-svc
spec:
  selector:
    app: test-asp
  ports:
    - port: 80
      targetPort: 8080
