k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-asp-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test-asp.binaro.uno
      secretName: test-asp-tls
  rules:
    - host: test-asp.binaro.uno
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-asp-svc
                port:
                  number: 80
